--- a/style.css
+++ b/style.css
@@ -3,7 +3,13 @@
     margin: 0 auto;
     padding: 20px;
     border: 1px solid #ccc;
+    background-color: rgb(0, 0, 0);
     text-align: center;
+    border-radius: 8px;
+  }
+#display{
+    background-color: bisque;
+    width: auto;
   }
   
   .calculator input {
@@ -13,6 +19,7 @@
   }
   
   .calculator button {
+    background-color: bisque;
     width: 40px;
     height: 40px;
     margin: 2px;
